bpo-33583: Add note in PyObject_GC_Resize() doc (GH-7021) (cherry picked from commit 1179f4b40f375af5c59cd4b6be9cc313fa0e1a37)

Co-authored-by: INADA Naoki <methane@users.noreply.github.com>